# Peer-2-Peer-Messaging-App

./: .gitignore  README.md  pubspec.yaml
Nat hole punching server/: server.py
android/: CMakeLists.txt  build.gradle
android/app/: build.gradle  google-services.json
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/dipinarora9/blockchainapp/: MainActivity.kt
android/app/src/main/kotlin/dipinarora9/peer2peer/: MainActivity.kt
android/app/src/main/res/drawable/: launch_background.xml
android/app/src/profile/: AndroidManifest.xml
android/c++/: audio_receiver.cpp  audio_receiver.h  bridge_services.cpp
android/c++/include/: dart_api.h  dart_api_dl.cc  dart_api_dl.h  dart_native_api.h  dart_tools_api.h  dart_version.h
android/c++/include/internal/: dart_api_dl_impl.h
android/gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: common_classes.dart  constants.dart  native_models.dart  node.dart
lib/screens/: broadcast_chat.dart  chat_screen.dart  chats.dart  client.dart  homepage.dart  private_chat.dart  server.dart
lib/services/: client_service.dart  common_services.dart  cryptography.dart  native_utils.dart  p2p.dart  server_service.dart  validation.dart
test/: widget_test.dart
